--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -13,5 +13,12 @@
     <TextView
             android:text="Hello World!"
             android:layout_width="wrap_content"
+            android:id="@+id/text_super"
             android:layout_height="wrap_content"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/connect_button"
+            android:id="@+id/button_connect"
+            android:onClick="connect" android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>
 </RelativeLayout>
